#247 レスポンスで送る情報の修正
