# docs/swagger.yaml
@@ -334,7 +334,9 @@ definitions:
         type: string
       created_at:
         type: string
-      current_stage_id:
+      current_stage_key:
+        type: string
+      current_stage_no:
         type: integer
       is_deleted:
         type: boolean
